--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       background: white;
       overflow: hidden;
     }
-    canvas { width: 100%; height: auto; display: block; cursor: move; }
+    canvas { width: 100%; height: auto; display: block; cursor: move; touch-action: none; }
     .download-btn {
       background: #27ae60;
       color: white;
@@ -144,7 +144,7 @@
       });
     }
 
-    // Upload one photo
+    // Upload one at a time
     document.getElementById('upload').addEventListener('change', (e) => {
       const file = e.target.files[0];
       if (!file) return;
@@ -229,33 +229,30 @@
       }
     });
 
-canvas.addEventListener('touchmove', (e) => {
-  e.preventDefault();
-  if (activePhotoIndex < 0) return;
+    canvas.addEventListener('touchmove', (e) => {
+      e.preventDefault();
+      if (activePhotoIndex < 0) return;
 
-  if (e.touches.length === 1 && isDragging) {
-    // Single finger drag
-    photos[activePhotoIndex].x = e.touches[0].clientX - startX;
-    photos[activePhotoIndex].y = e.touches[0].clientY - startY;
-    drawAll();
-  } else if (e.touches.length === 2) {
-    // Two-finger pinch zoom
-    const dx = e.touches[0].clientX - e.touches[1].clientX;
-    const dy = e.touches[0].clientY - e.touches[1].clientY;
-    const newDist = Math.sqrt(dx*dx + dy*dy);
+      if (e.touches.length === 1 && isDragging) {
+        photos[activePhotoIndex].x = e.touches[0].clientX - startX;
+        photos[activePhotoIndex].y = e.touches[0].clientY - startY;
+        drawAll();
+      } else if (e.touches.length === 2) {
+        const dx = e.touches[0].clientX - e.touches[1].clientX;
+        const dy = e.touches[0].clientY - e.touches[1].clientY;
+        const newDist = Math.sqrt(dx*dx + dy*dy);
 
-    if (touchDist > 0) { // avoid division by zero
-      const zoomFactor = newDist / touchDist;
-      // Slow zoom for smoother control
-      const smoothedZoom = 1 + (zoomFactor - 1) * 0.5;
-      photos[activePhotoIndex].scale *= smoothedZoom;
-      // Better limits: min 0.2 (not too tiny), max 5
-      photos[activePhotoIndex].scale = Math.max(0.2, Math.min(photos[activePhotoIndex].scale, 5));
-    }
-    touchDist = newDist;
-    drawAll();
-  }
-});
+        if (touchDist > 10) {
+          let zoomFactor = newDist / touchDist;
+          zoomFactor = 1 + (zoomFactor - 1) * 0.6; // Smoother zoom
+          photos[activePhotoIndex].scale *= zoomFactor;
+          photos[activePhotoIndex].scale = Math.max(0.3, Math.min(photos[activePhotoIndex].scale, 5));
+        }
+        touchDist = newDist;
+        drawAll();
+      }
+    });
+
     canvas.addEventListener('touchend', () => {
       isDragging = false;
     });
@@ -291,11 +288,11 @@ canvas.addEventListener('touchmove', (e) => {
       if (activePhotoIndex < 0) return;
       const zoomFactor = e.deltaY < 0 ? 1.1 : 0.9;
       photos[activePhotoIndex].scale *= zoomFactor;
-      photos[activePhotoIndex].scale = Math.max(0.1, Math.min(photos[activePhotoIndex].scale, 5));
+      photos[activePhotoIndex].scale = Math.max(0.3, Math.min(photos[activePhotoIndex].scale, 5));
       drawAll();
     });
 
-    // Download PDF (Letter Landscape, 300 DPI)
+    // Download PDF (Letter Landscape)
     function downloadPDF() {
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({
