--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
 
   <p class="disclaimer">Photos are processed in your browser only — nothing is uploaded or stored.</p>
 
+  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.6 – Feb 23, 2026 – Mobile Pinch Zoom Fix</p>
+
   <script>
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
@@ -225,37 +227,33 @@
         isDragging = false;
         const dx = e.touches[0].clientX - e.touches[1].clientX;
         const dy = e.touches[0].clientY - e.touches[1].clientY;
-        touchDist = Math.sqrt(dx*dx + dy*dy);
+        touchDist = Math.hypot(dx, dy);
       }
     });
 
     canvas.addEventListener('touchmove', (e) => {
-  e.preventDefault();
-  if (activePhotoIndex < 0) return;
+      e.preventDefault();
+      if (activePhotoIndex < 0) return;
 
-  if (e.touches.length === 1 && isDragging) {
-    // Single finger drag
-    photos[activePhotoIndex].x = e.touches[0].clientX - startX;
-    photos[activePhotoIndex].y = e.touches[0].clientY - startY;
-    drawAll();
-  } else if (e.touches.length === 2) {
-    // Two-finger pinch zoom
-    const dx = e.touches[0].clientX - e.touches[1].clientX;
-    const dy = e.touches[0].clientY - e.touches[1].clientY;
-    const newDist = Math.sqrt(dx*dx + dy*dy);
+      if (e.touches.length === 1 && isDragging) {
+        photos[activePhotoIndex].x = e.touches[0].clientX - startX;
+        photos[activePhotoIndex].y = e.touches[0].clientY - startY;
+        drawAll();
+      } else if (e.touches.length === 2) {
+        const dx = e.touches[0].clientX - e.touches[1].clientX;
+        const dy = e.touches[0].clientY - e.touches[1].clientY;
+        const newDist = Math.hypot(dx, dy);
 
-    if (touchDist > 10) { // ignore tiny movements
-      let zoomFactor = newDist / touchDist;
-      // Smoother pinch: reduce speed for control
-      zoomFactor = 1 + (zoomFactor - 1) * 0.6;
-      photos[activePhotoIndex].scale *= zoomFactor;
-      // New limits: allow smaller (0.15) but not invisible
-      photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 6));
-    }
-    touchDist = newDist;
-    drawAll();
-  }
-});
+        if (touchDist > 5) {
+          let zoomFactor = newDist / touchDist;
+          zoomFactor = 1 + (zoomFactor - 1) * 0.45; // Smoother control
+          photos[activePhotoIndex].scale *= zoomFactor;
+          photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 6));
+        }
+        touchDist = newDist;
+        drawAll();
+      }
+    });
 
     canvas.addEventListener('touchend', () => {
       isDragging = false;
@@ -292,11 +290,11 @@
       if (activePhotoIndex < 0) return;
       const zoomFactor = e.deltaY < 0 ? 1.1 : 0.9;
       photos[activePhotoIndex].scale *= zoomFactor;
-      photos[activePhotoIndex].scale = Math.max(0.3, Math.min(photos[activePhotoIndex].scale, 5));
+      photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 6));
       drawAll();
     });
 
-    // Download PDF (Letter Landscape)
+    // Download PDF (Letter Landscape, 300 DPI)
     function downloadPDF() {
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({
@@ -323,4 +321,3 @@
   </script>
 </body>
 </html>
-
