--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
           const scaleX = holeWidth / tempImg.width;
           const scaleY = holeHeight / tempImg.height;
-          const scale = Math.min(scaleX, scaleY) * 0.95;
+          const scale = Math.min(scaleX, scaleY) * 0.7;
 
           const x = holeLeft + (holeWidth - tempImg.width * scale) / 2;
           const y = holeTop + (holeHeight - tempImg.height * scale) / 2;
@@ -231,33 +231,33 @@
       }
     });
 
-    canvas.addEventListener('touchmove', (e) => {
-      e.preventDefault();
-      if (activePhotoIndex < 0) return;
+   canvas.addEventListener('touchmove', (e) => {
+  e.preventDefault();
+  if (activePhotoIndex < 0) return;
 
-      if (e.touches.length === 1 && isDragging) {
-        photos[activePhotoIndex].x = e.touches[0].clientX - startX;
-        photos[activePhotoIndex].y = e.touches[0].clientY - startY;
-        drawAll();
-      } else if (e.touches.length === 2) {
-        const dx = e.touches[0].clientX - e.touches[1].clientX;
-        const dy = e.touches[0].clientY - e.touches[1].clientY;
-        const newDist = Math.hypot(dx, dy);
+  if (e.touches.length === 1 && isDragging) {
+    // Single finger drag
+    photos[activePhotoIndex].x = e.touches[0].clientX - startX;
+    photos[activePhotoIndex].y = e.touches[0].clientY - startY;
+    drawAll();
+  } else if (e.touches.length === 2) {
+    // Two-finger pinch zoom
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const dy = e.touches[0].clientY - e.touches[1].clientY;
+    const newDist = Math.hypot(dx, dy);
 
-        if (touchDist > 5) {
-          let zoomFactor = newDist / touchDist;
-          zoomFactor = 1 + (zoomFactor - 1) * 0.45; // Smoother control
-          photos[activePhotoIndex].scale *= zoomFactor;
-          photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 6));
-        }
-        touchDist = newDist;
-        drawAll();
-      }
-    });
-
-    canvas.addEventListener('touchend', () => {
-      isDragging = false;
-    });
+    if (touchDist > 5) { // Deadzone to ignore tiny movements
+      let zoomFactor = newDist / touchDist;
+      // Stronger smoothing + allow going below original scale
+      zoomFactor = 1 + (zoomFactor - 1) * 0.4; // even slower/more natural
+      photos[activePhotoIndex].scale *= zoomFactor;
+      // Very low min scale so you can shrink it a lot
+      photos[activePhotoIndex].scale = Math.max(0.05, Math.min(photos[activePhotoIndex].scale, 8));
+    }
+    touchDist = newDist;
+    drawAll();
+  }
+});
 
     // Mouse support (desktop)
     canvas.addEventListener('mousedown', (e) => {
@@ -321,3 +321,4 @@
   </script>
 </body>
 </html>
+
