--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     frameImg.onload = drawAll;
 
     function drawAll() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
 
   // 1. Draw ALL photos first (under the frame)
   photos.forEach((photoObj, i) => {
@@ -159,24 +159,24 @@
       reader.onload = (event) => {
         const tempImg = new Image();
         tempImg.src = event.target.result;
-        tempImg.onload = () => {
-          const holeLeft = 80;
-          const holeTop = 100;
-          const holeWidth = 340;
-          const holeHeight = 340;
+tempImg.onload = () => {
+  const holeLeft = 100;   // ← left edge of hole — change to match your PNG
+  const holeTop = 120;    // ← top edge
+  const holeWidth = 300;  // ← width of transparent hole
+  const holeHeight = 300; // ← height
 
-          const scaleX = holeWidth / tempImg.width;
-          const scaleY = holeHeight / tempImg.height;
-          const scale = Math.min(scaleX, scaleY) * 0.7;
+  const scaleX = holeWidth / tempImg.width;
+  const scaleY = holeHeight / tempImg.height;
+  const scale = Math.min(scaleX, scaleY) * 0.9;
 
-          const x = holeLeft + (holeWidth - tempImg.width * scale) / 2;
-          const y = holeTop + (holeHeight - tempImg.height * scale) / 2;
+  const x = holeLeft + (holeWidth - tempImg.width * scale) / 2;
+  const y = holeTop + (holeHeight - tempImg.height * scale) / 2;
 
-          photos.push({ img: tempImg, x, y, scale });
-          updatePhotoList();
-          activePhotoIndex = photos.length - 1;
-          drawAll();
-        };
+  photos.push({ img: tempImg, x, y, scale });
+  updatePhotoList();
+  activePhotoIndex = photos.length - 1;
+  drawAll();
+};
       };
       reader.readAsDataURL(file);
     });
@@ -245,21 +245,19 @@
     photos[activePhotoIndex].y = e.touches[0].clientY - startY;
     drawAll();
   } else if (e.touches.length === 2) {
-    // Two-finger pinch zoom
-    const dx = e.touches[0].clientX - e.touches[1].clientX;
-    const dy = e.touches[0].clientY - e.touches[1].clientY;
-    const newDist = Math.hypot(dx, dy);
+  const dx = e.touches[0].clientX - e.touches[1].clientX;
+  const dy = e.touches[0].clientY - e.touches[1].clientY;
+  const newDist = Math.hypot(dx, dy);
 
-    if (touchDist > 5) { // Deadzone to ignore tiny movements
-      let zoomFactor = newDist / touchDist;
-      // Stronger smoothing + allow going below original scale
-      zoomFactor = 1 + (zoomFactor - 1) * 0.4; // even slower/more natural
-      photos[activePhotoIndex].scale *= zoomFactor;
-      // Very low min scale so you can shrink it a lot
-      photos[activePhotoIndex].scale = Math.max(0.05, Math.min(photos[activePhotoIndex].scale, 8));
-    }
-    touchDist = newDist;
-    drawAll();
+  if (touchDist > 5) {
+    let zoomFactor = newDist / touchDist;
+    zoomFactor = 1 + (zoomFactor - 1) * 0.35; // very smooth/slow
+    photos[activePhotoIndex].scale *= zoomFactor;
+    photos[activePhotoIndex].scale = Math.max(0.05, Math.min(photos[activePhotoIndex].scale, 10));
+  }
+  touchDist = newDist;
+  drawAll();
+}
   }
 });
 
@@ -357,6 +355,7 @@ function downloadPDF() {
   </script>
 </body>
 </html>
+
 
 
 
