--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <p class="disclaimer">Photos are processed in your browser only — nothing is uploaded or stored.</p>
 
-  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.6 – Feb 23, 2026 – Mobile Pinch Zoom Fix</p>
+  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.8 – Feb 23, 2026 – PDF Size Reduced + Mobile Zoom Fix</p>
 
   <script>
     const canvas = document.getElementById('canvas');
@@ -129,28 +129,25 @@
     frameImg.onload = drawAll;
 
     function drawAll() {
-ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
 
-  // 1. Draw ALL photos first (under the frame)
-  photos.forEach((photoObj, i) => {
-    const { img, x, y, scale } = photoObj;
-    const w = img.width * scale;
-    const h = img.height * scale;
-    ctx.drawImage(img, x, y, w, h);
+      photos.forEach((photoObj, i) => {
+        const { img, x, y, scale } = photoObj;
+        const w = img.width * scale;
+        const h = img.height * scale;
+        ctx.drawImage(img, x, y, w, h);
 
-    // Highlight active photo border (still on top of photo but under frame)
-    if (i === activePhotoIndex) {
-      ctx.strokeStyle = '#4a90e2';
-      ctx.lineWidth = 4;
-      ctx.strokeRect(x - 2, y - 2, w + 4, h + 4);
+        // Draw selection border ON TOP
+        if (i === activePhotoIndex) {
+          ctx.strokeStyle = 'rgba(74, 144, 226, 0.8)'; // semi-transparent blue
+          ctx.lineWidth = 6;
+          ctx.strokeRect(x - 3, y - 3, w + 6, h + 6);
+        }
+      });
     }
-  });
 
-  // 2. Draw the frame LAST (so it overlays everything)
-  ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
-}
-
-    // Upload one at a time
+    // Upload one photo
     document.getElementById('upload').addEventListener('change', (e) => {
       const file = e.target.files[0];
       if (!file) return;
@@ -159,24 +156,24 @@ ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
       reader.onload = (event) => {
         const tempImg = new Image();
         tempImg.src = event.target.result;
-tempImg.onload = () => {
-  const holeLeft = 100;   // ← left edge of hole — change to match your PNG
-  const holeTop = 120;    // ← top edge
-  const holeWidth = 300;  // ← width of transparent hole
-  const holeHeight = 300; // ← height
+        tempImg.onload = () => {
+          const holeLeft = 80;
+          const holeTop = 100;
+          const holeWidth = 340;
+          const holeHeight = 340;
 
-  const scaleX = holeWidth / tempImg.width;
-  const scaleY = holeHeight / tempImg.height;
-  const scale = Math.min(scaleX, scaleY) * 0.9;
+          const scaleX = holeWidth / tempImg.width;
+          const scaleY = holeHeight / tempImg.height;
+          const scale = Math.min(scaleX, scaleY) * 0.7; // start smaller (70%)
 
-  const x = holeLeft + (holeWidth - tempImg.width * scale) / 2;
-  const y = holeTop + (holeHeight - tempImg.height * scale) / 2;
+          const x = holeLeft + (holeWidth - tempImg.width * scale) / 2;
+          const y = holeTop + (holeHeight - tempImg.height * scale) / 2;
 
-  photos.push({ img: tempImg, x, y, scale });
-  updatePhotoList();
-  activePhotoIndex = photos.length - 1;
-  drawAll();
-};
+          photos.push({ img: tempImg, x, y, scale });
+          updatePhotoList();
+          activePhotoIndex = photos.length - 1;
+          drawAll();
+        };
       };
       reader.readAsDataURL(file);
     });
@@ -218,7 +215,7 @@ tempImg.onload = () => {
       });
     }
 
-    // Touch support (mobile drag & pinch)
+    // Touch support
     canvas.addEventListener('touchstart', (e) => {
       e.preventDefault();
       if (activePhotoIndex < 0) return;
@@ -235,33 +232,35 @@ tempImg.onload = () => {
       }
     });
 
-   canvas.addEventListener('touchmove', (e) => {
-  e.preventDefault();
-  if (activePhotoIndex < 0) return;
+    canvas.addEventListener('touchmove', (e) => {
+      e.preventDefault();
+      if (activePhotoIndex < 0) return;
 
-  if (e.touches.length === 1 && isDragging) {
-    // Single finger drag
-    photos[activePhotoIndex].x = e.touches[0].clientX - startX;
-    photos[activePhotoIndex].y = e.touches[0].clientY - startY;
-    drawAll();
-  } else if (e.touches.length === 2) {
-  const dx = e.touches[0].clientX - e.touches[1].clientX;
-  const dy = e.touches[0].clientY - e.touches[1].clientY;
-  const newDist = Math.hypot(dx, dy);
+      if (e.touches.length === 1 && isDragging) {
+        photos[activePhotoIndex].x = e.touches[0].clientX - startX;
+        photos[activePhotoIndex].y = e.touches[0].clientY - startY;
+        drawAll();
+      } else if (e.touches.length === 2) {
+        const dx = e.touches[0].clientX - e.touches[1].clientX;
+        const dy = e.touches[0].clientY - e.touches[1].clientY;
+        const newDist = Math.hypot(dx, dy);
 
-  if (touchDist > 5) {
-    let zoomFactor = newDist / touchDist;
-    zoomFactor = 1 + (zoomFactor - 1) * 0.35; // very smooth/slow
-    photos[activePhotoIndex].scale *= zoomFactor;
-    photos[activePhotoIndex].scale = Math.max(0.05, Math.min(photos[activePhotoIndex].scale, 10));
-  }
-  touchDist = newDist;
-  drawAll();
-}
-  }
-});
+        if (touchDist > 5) {
+          let zoomFactor = newDist / touchDist;
+          zoomFactor = 1 + (zoomFactor - 1) * 0.45;
+          photos[activePhotoIndex].scale *= zoomFactor;
+          photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 8));
+        }
+        touchDist = newDist;
+        drawAll();
+      }
+    });
 
-    // Mouse support (desktop)
+    canvas.addEventListener('touchend', () => {
+      isDragging = false;
+    });
+
+    // Mouse support
     canvas.addEventListener('mousedown', (e) => {
       if (activePhotoIndex < 0) return;
       isDragging = true;
@@ -292,70 +291,62 @@ tempImg.onload = () => {
       if (activePhotoIndex < 0) return;
       const zoomFactor = e.deltaY < 0 ? 1.1 : 0.9;
       photos[activePhotoIndex].scale *= zoomFactor;
-      photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 6));
+      photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 8));
       drawAll();
     });
 
-    // Download PDF (Letter Landscape, 300 DPI)
-function downloadPDF() {
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF({
-    orientation: 'landscape',
-    unit: 'pt',
-    format: 'letter'
-  });
+    // Download PDF with resized/compressed images
+    function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF({
+        orientation: 'landscape',
+        unit: 'pt',
+        format: 'letter'
+      });
 
-  const pageWidth = doc.internal.pageSize.getWidth();
-  const pageHeight = doc.internal.pageSize.getHeight();
-  const scale = Math.min(pageWidth / canvas.width, pageHeight / canvas.height);
+      const pageWidth = doc.internal.pageSize.getWidth();
+      const pageHeight = doc.internal.pageSize.getHeight();
+      const scale = Math.min(pageWidth / canvas.width, pageHeight / canvas.height);
 
-  // Draw frame at scaled size
-  doc.addImage(frameImg.src, 'PNG', 0, 0, canvas.width * scale, canvas.height * scale);
+      doc.addImage(frameImg.src, 'PNG', 0, 0, canvas.width * scale, canvas.height * scale);
 
-  // Draw each photo resized & compressed
-  photos.forEach((photoObj) => {
-    const { img, x, y, scale: pScale } = photoObj;
+      photos.forEach((photoObj) => {
+        const { img, x, y, scale: pScale } = photoObj;
 
-    // Create temporary canvas to resize & compress photo
-    const tempCanvas = document.createElement('canvas');
-    const maxSize = 1500; // max dimension for good print without huge file
-    let tempW = img.width;
-    let tempH = img.height;
+        // Resize photo to max 1200 px long side
+        const maxDim = 1200;
+        let tempW = img.width;
+        let tempH = img.height;
+        if (tempW > tempH) {
+          if (tempW > maxDim) {
+            tempH *= maxDim / tempW;
+            tempW = maxDim;
+          }
+        } else {
+          if (tempH > maxDim) {
+            tempW *= maxDim / tempH;
+            tempH = maxDim;
+          }
+        }
 
-    // Resize proportionally
-    if (tempW > tempH) {
-      if (tempW > maxSize) {
-        tempH = tempH * (maxSize / tempW);
-        tempW = maxSize;
-      }
-    } else {
-      if (tempH > maxSize) {
-        tempW = tempW * (maxSize / tempH);
-        tempH = maxSize;
-      }
+        const tempCanvas = document.createElement('canvas');
+        tempCanvas.width = tempW;
+        tempCanvas.height = tempH;
+        const tempCtx = tempCanvas.getContext('2d');
+        tempCtx.drawImage(img, 0, 0, tempW, tempH);
+
+        const resizedData = tempCanvas.toDataURL('image/jpeg', 0.7); // JPEG 70% quality
+
+        const pdfX = x * scale;
+        const pdfY = y * scale;
+        const pdfW = (tempW / img.width) * (img.width * pScale) * scale;
+        const pdfH = (tempH / img.height) * (img.height * pScale) * scale;
+
+        doc.addImage(resizedData, 'JPEG', pdfX, pdfY, pdfW, pdfH);
+      });
+
+      doc.save('your-custom-frame-letter-landscape.pdf');
     }
-
-    tempCanvas.width = tempW;
-    tempCanvas.height = tempH;
-    const tempCtx = tempCanvas.getContext('2d');
-    tempCtx.drawImage(img, 0, 0, tempW, tempH);
-
-    // Add resized & compressed version to PDF
-    const resizedDataUrl = tempCanvas.toDataURL('image/jpeg', 0.75); // JPEG quality 75% — good balance
-    const pdfX = x * scale;
-    const pdfY = y * scale;
-    const pdfW = (tempW / img.width) * (img.width * pScale) * scale;
-    const pdfH = (tempH / img.height) * (img.height * pScale) * scale;
-
-    doc.addImage(resizedDataUrl, 'JPEG', pdfX, pdfY, pdfW, pdfH);
-  });
-
-  doc.save('your-custom-frame-letter-landscape.pdf');
-}
   </script>
 </body>
 </html>
-
-
-
-
