--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <p class="disclaimer">Photos are processed in your browser only — nothing is uploaded or stored.</p>
 
-  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.10 – Feb 23, 2026 – PDF Size Fix + Mobile Zoom</p>
+  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.11 – Feb 23, 2026 – PDF Size Reduced + Mobile Zoom</p>
 
   <script>
     const canvas = document.getElementById('canvas');
@@ -130,7 +130,7 @@
 
     function drawAll() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height); // Frame first (under)
+      ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height); // Frame under photos
 
       photos.forEach((photoObj, i) => {
         const { img, x, y, scale } = photoObj;
@@ -140,14 +140,14 @@
 
         // Selection border on top
         if (i === activePhotoIndex) {
-          ctx.strokeStyle = 'rgba(74, 144, 226, 0.9)'; // semi-transparent blue
+          ctx.strokeStyle = 'rgba(74, 144, 226, 0.9)';
           ctx.lineWidth = 6;
           ctx.strokeRect(x - 3, y - 3, w + 6, h + 6);
         }
       });
     }
 
-    // Upload one at a time
+    // Upload one photo at a time
     document.getElementById('upload').addEventListener('change', (e) => {
       const file = e.target.files[0];
       if (!file) return;
@@ -215,7 +215,7 @@
       });
     }
 
-    // Touch support (mobile)
+    // Touch support (mobile drag & pinch)
     canvas.addEventListener('touchstart', (e) => {
       e.preventDefault();
       if (activePhotoIndex < 0) return;
@@ -247,9 +247,9 @@
 
         if (touchDist > 5) {
           let zoomFactor = newDist / touchDist;
-          zoomFactor = 1 + (zoomFactor - 1) * 0.45;
+          zoomFactor = 1 + (zoomFactor - 1) * 0.45; // Smoother control
           photos[activePhotoIndex].scale *= zoomFactor;
-          photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 8));
+          photos[activePhotoIndex].scale = Math.max(0.1, Math.min(photos[activePhotoIndex].scale, 8));
         }
         touchDist = newDist;
         drawAll();
@@ -291,65 +291,45 @@
       if (activePhotoIndex < 0) return;
       const zoomFactor = e.deltaY < 0 ? 1.1 : 0.9;
       photos[activePhotoIndex].scale *= zoomFactor;
-      photos[activePhotoIndex].scale = Math.max(0.15, Math.min(photos[activePhotoIndex].scale, 8));
+      photos[activePhotoIndex].scale = Math.max(0.1, Math.min(photos[activePhotoIndex].scale, 8));
       drawAll();
     });
 
     // Download PDF with resized/compressed images
-   function downloadPDF() {
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF({
-    orientation: 'landscape',
-    unit: 'pt',
-    format: 'letter'
-  });
+    function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF({
+        orientation: 'landscape',
+        unit: 'pt',
+        format: 'letter'
+      });
 
-  const pageWidth = doc.internal.pageSize.getWidth();
-  const pageHeight = doc.internal.pageSize.getHeight();
-  const scale = Math.min(pageWidth / canvas.width, pageHeight / canvas.height);
+      const pageWidth = doc.internal.pageSize.getWidth();
+      const pageHeight = doc.internal.pageSize.getHeight();
+      const scale = Math.min(pageWidth / canvas.width, pageHeight / canvas.height);
 
-  // Draw frame (low-res is fine for frame)
-  doc.addImage(frameImg.src, 'PNG', 0, 0, canvas.width * scale, canvas.height * scale);
+      // Draw frame first (under)
+      doc.addImage(frameImg.src, 'PNG', 0, 0, canvas.width * scale, canvas.height * scale);
 
-  // Draw photos with heavy compression
-  photos.forEach((photoObj) => {
-    const { img, x, y, scale: pScale } = photoObj;
+      // Draw photos resized & compressed
+      photos.forEach((photoObj) => {
+        const { img, x, y, scale: pScale } = photoObj;
 
-    // Create very small temp canvas (max 800 px long side — good print quality, tiny file)
-    const maxDim = 800; // Lower = smaller PDF file
-    let tempW = img.width;
-    let tempH = img.height;
-    if (tempW > tempH) {
-      if (tempW > maxDim) {
-        tempH *= maxDim / tempW;
-        tempW = maxDim;
-      }
-    } else {
-      if (tempH > maxDim) {
-        tempW *= maxDim / tempH;
-        tempH = maxDim;
-      }
-    }
-
-    const tempCanvas = document.createElement('canvas');
-    tempCanvas.width = tempW;
-    tempCanvas.height = tempH;
-    const tempCtx = tempCanvas.getContext('2d');
-    tempCtx.drawImage(img, 0, 0, tempW, tempH);
-
-    // JPEG at low quality (0.6 = good print, very small file)
-    const resizedData = tempCanvas.toDataURL('image/jpeg', 0.6);
-
-    const pdfX = x * scale;
-    const pdfY = y * scale;
-    const pdfW = (tempW / img.width) * (img.width * pScale) * scale;
-    const pdfH = (tempH / img.height) * (img.height * pScale) * scale;
-
-    doc.addImage(resizedData, 'JPEG', pdfX, pdfY, pdfW, pdfH);
-  });
-
-  doc.save('your-custom-frame-letter-landscape.pdf');
-}
+        // Resize photo to max 1000 px long side
+        const maxDim = 1000;
+        let tempW = img.width;
+        let tempH = img.height;
+        if (tempW > tempH) {
+          if (tempW > maxDim) {
+            tempH *= maxDim / tempW;
+            tempW = maxDim;
+          }
+        } else {
+          if (tempH > maxDim) {
+            tempW *= maxDim / tempH;
+            tempH = maxDim;
+          }
+        }
 
         const tempCanvas = document.createElement('canvas');
         tempCanvas.width = tempW;
@@ -357,7 +337,7 @@
         const tempCtx = tempCanvas.getContext('2d');
         tempCtx.drawImage(img, 0, 0, tempW, tempH);
 
-        const resizedData = tempCanvas.toDataURL('image/jpeg', 0.7); // 70% quality JPEG
+        const resizedData = tempCanvas.toDataURL('image/jpeg', 0.65); // 65% quality
 
         const pdfX = x * scale;
         const pdfY = y * scale;
@@ -372,4 +352,3 @@
   </script>
 </body>
 </html>
-
