--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <p class="disclaimer">Photos are processed in your browser only — nothing is uploaded or stored.</p>
 
-  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.13 – Feb 23, 2026 – Final PDF Size Reduction</p>
+  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.14 – Feb 23, 2026 – PDF Size Reduced v3</p>
 
   <script>
     const canvas = document.getElementById('canvas');
@@ -130,7 +130,7 @@
 
     function drawAll() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height); // Frame under
+      ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height); // Frame UNDER photos
 
       photos.forEach((photoObj, i) => {
         const { img, x, y, scale } = photoObj;
@@ -138,6 +138,7 @@
         const h = img.height * scale;
         ctx.drawImage(img, x, y, w, h);
 
+        // Selection border ON TOP
         if (i === activePhotoIndex) {
           ctx.strokeStyle = 'rgba(74, 144, 226, 0.9)';
           ctx.lineWidth = 8;
@@ -146,6 +147,7 @@
       });
     }
 
+    // Upload one photo
     document.getElementById('upload').addEventListener('change', (e) => {
       const file = e.target.files[0];
       if (!file) return;
@@ -162,7 +164,7 @@
 
           const scaleX = holeWidth / tempImg.width;
           const scaleY = holeHeight / tempImg.height;
-          const scale = Math.min(scaleX, scaleY) * 0.7;
+          const scale = Math.min(scaleX, scaleY) * 0.7; // Start smaller
 
           const x = holeLeft + (holeWidth - tempImg.width * scale) / 2;
           const y = holeTop + (holeHeight - tempImg.height * scale) / 2;
@@ -213,6 +215,7 @@
       });
     }
 
+    // Touch support (mobile drag & pinch)
     canvas.addEventListener('touchstart', (e) => {
       e.preventDefault();
       if (activePhotoIndex < 0) return;
@@ -257,6 +260,7 @@
       isDragging = false;
     });
 
+    // Mouse support
     canvas.addEventListener('mousedown', (e) => {
       if (activePhotoIndex < 0) return;
       isDragging = true;
@@ -291,6 +295,7 @@
       drawAll();
     });
 
+    // Download PDF with aggressive size reduction
     function downloadPDF() {
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({
@@ -308,7 +313,7 @@
       photos.forEach((photoObj) => {
         const { img, x, y, scale: pScale } = photoObj;
 
-        const maxDim = 1000;
+        const maxDim = 800; // Smaller = much lower file size
         let tempW = img.width;
         let tempH = img.height;
         if (tempW > tempH) {
@@ -329,7 +334,7 @@
         const tempCtx = tempCanvas.getContext('2d');
         tempCtx.drawImage(img, 0, 0, tempW, tempH);
 
-        const resizedData = tempCanvas.toDataURL('image/jpeg', 0.6);
+        const resizedData = tempCanvas.toDataURL('image/jpeg', 0.6); // 60% quality JPEG
 
         const pdfX = x * scale;
         const pdfY = y * scale;
