Update index.html for new features and version 1.17
Updated version number and added new features for zoom and frame rendering.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
   <p class="disclaimer">Photos are processed in your browser only — nothing is uploaded or stored.</p>
 
-  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.16 – Feb 23, 2026 – Photos Under Frame + PNG Download</p>
+  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.17 – Feb 22, 2026 – Super Small Zoom + Frame on Top</p>
 
   <script>
     const canvas = document.getElementById('canvas');
@@ -130,213 +130,4 @@
     function drawAll() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // Draw photos first (under layer)
-      photos.forEach((photoObj, i) => {
-        const { img, x, y, scale } = photoObj;
-        const w = img.width * scale;
-        const h = img.height * scale;
-        ctx.drawImage(img, x, y, w, h);
-      });
-
-      // Draw frame ON TOP (so borders are always visible over photos)
-      ctx.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
-
-      // Draw selection border ON TOP of everything
-      if (activePhotoIndex >= 0 && photos[activePhotoIndex]) {
-        const { x, y, scale } = photos[activePhotoIndex];
-        const w = photos[activePhotoIndex].img.width * scale;
-        const h = photos[activePhotoIndex].img.height * scale;
-        ctx.strokeStyle = 'rgba(74, 144, 226, 0.9)';
-        ctx.lineWidth = 8;
-        ctx.strokeRect(x - 4, y - 4, w + 8, h + 8);
-      }
-    }
-
-    // Upload one photo at a time
-    document.getElementById('upload').addEventListener('change', (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
-
-      const reader = new FileReader();
-      reader.onload = (event) => {
-        const tempImg = new Image();
-        tempImg.src = event.target.result;
-        tempImg.onload = () => {
-          const holeLeft = 80;
-          const holeTop = 100;
-          const holeWidth = 340;
-          const holeHeight = 340;
-
-          const scaleX = holeWidth / tempImg.width;
-          const scaleY = holeHeight / tempImg.height;
-          const scale = Math.min(scaleX, scaleY) * 0.7;
-
-          const x = holeLeft + (holeWidth - tempImg.width * scale) / 2;
-          const y = holeTop + (holeHeight - tempImg.height * scale) / 2;
-
-          photos.push({ img: tempImg, x, y, scale });
-          updatePhotoList();
-          activePhotoIndex = photos.length - 1;
-          drawAll();
-        };
-      };
-      reader.readAsDataURL(file);
-    });
-
-    function updatePhotoList() {
-      const list = document.getElementById('photo-list');
-      list.innerHTML = '';
-
-      photos.forEach((photoObj, i) => {
-        const container = document.createElement('div');
-        container.className = 'photo-thumb-container';
-
-        const thumb = document.createElement('img');
-        thumb.src = photoObj.img.src;
-        thumb.className = 'photo-thumb' + (i === activePhotoIndex ? ' active' : '');
-        thumb.onclick = () => {
-          activePhotoIndex = i;
-          updatePhotoList();
-          drawAll();
-        };
-
-        const deleteBtn = document.createElement('button');
-        deleteBtn.className = 'delete-btn';
-        deleteBtn.textContent = 'X';
-        deleteBtn.onclick = (event) => {
-          event.stopPropagation();
-          if (confirm('Delete this photo?')) {
-            photos.splice(i, 1);
-            if (activePhotoIndex === i) activePhotoIndex = -1;
-            if (activePhotoIndex >= photos.length) activePhotoIndex = photos.length - 1;
-            updatePhotoList();
-            drawAll();
-          }
-        };
-
-        container.appendChild(thumb);
-        container.appendChild(deleteBtn);
-        list.appendChild(container);
-      });
-    }
-
-    // Touch support (mobile)
-    canvas.addEventListener('touchstart', (e) => {
-      e.preventDefault();
-      if (activePhotoIndex < 0) return;
-
-      if (e.touches.length === 1) {
-        isDragging = true;
-        startX = e.touches[0].clientX - photos[activePhotoIndex].x;
-        startY = e.touches[0].clientY - photos[activePhotoIndex].y;
-      } else if (e.touches.length === 2) {
-        isDragging = false;
-        const dx = e.touches[0].clientX - e.touches[1].clientX;
-        const dy = e.touches[0].clientY - e.touches[1].clientY;
-        touchDist = Math.hypot(dx, dy);
-      }
-    });
-
-    canvas.addEventListener('touchmove', (e) => {
-      e.preventDefault();
-      if (activePhotoIndex < 0) return;
-
-      if (e.touches.length === 1 && isDragging) {
-        photos[activePhotoIndex].x = e.touches[0].clientX - startX;
-        photos[activePhotoIndex].y = e.touches[0].clientY - startY;
-        drawAll();
-      } else if (e.touches.length === 2) {
-        const dx = e.touches[0].clientX - e.touches[1].clientX;
-        const dy = e.touches[0].clientY - e.touches[1].clientY;
-        const newDist = Math.hypot(dx, dy);
-
-        if (touchDist > 5) {
-          let zoomFactor = newDist / touchDist;
-          zoomFactor = 1 + (zoomFactor - 1) * 0.45;
-          photos[activePhotoIndex].scale *= zoomFactor;
-          photos[activePhotoIndex].scale = Math.max(0.1, Math.min(photos[activePhotoIndex].scale, 8));
-        }
-        touchDist = newDist;
-        drawAll();
-      }
-    });
-
-    canvas.addEventListener('touchend', () => {
-      isDragging = false;
-    });
-
-    // Mouse support
-    canvas.addEventListener('mousedown', (e) => {
-      if (activePhotoIndex < 0) return;
-      isDragging = true;
-      startX = e.offsetX - photos[activePhotoIndex].x;
-      startY = e.offsetY - photos[activePhotoIndex].y;
-      canvas.style.cursor = 'grabbing';
-    });
-
-    canvas.addEventListener('mousemove', (e) => {
-      if (!isDragging || activePhotoIndex < 0) return;
-      photos[activePhotoIndex].x = e.offsetX - startX;
-      photos[activePhotoIndex].y = e.offsetY - startY;
-      drawAll();
-    });
-
-    canvas.addEventListener('mouseup', () => {
-      isDragging = false;
-      canvas.style.cursor = 'move';
-    });
-
-    canvas.addEventListener('mouseleave', () => {
-      isDragging = false;
-      canvas.style.cursor = 'move';
-    });
-
-    canvas.addEventListener('wheel', (e) => {
-      e.preventDefault();
-      if (activePhotoIndex < 0) return;
-      const zoomFactor = e.deltaY < 0 ? 1.1 : 0.9;
-      photos[activePhotoIndex].scale *= zoomFactor;
-      photos[activePhotoIndex].scale = Math.max(0.1, Math.min(photos[activePhotoIndex].scale, 8));
-      drawAll();
-    });
-
-    // Download high-res PNG
-function downloadPNG() {
-  const tempCanvas = document.createElement('canvas');
-  const scaleFactor = 2; // 2x resolution for sharp print
-  tempCanvas.width = canvas.width * scaleFactor;
-  tempCanvas.height = canvas.height * scaleFactor;
-  const tempCtx = tempCanvas.getContext('2d');
-
-  tempCtx.scale(scaleFactor, scaleFactor);
-
-  // Draw photos FIRST (under layer)
-  photos.forEach((photoObj) => {
-    const { img, x, y, scale } = photoObj;
-    const w = img.width * scale;
-    const h = img.height * scale;
-    tempCtx.drawImage(img, x, y, w, h);
-  });
-  // Draw frame ON TOP
-  tempCtx.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
-
-  // Draw selection border ON TOP (if active)
-  if (activePhotoIndex >= 0 && photos[activePhotoIndex]) {
-    const { x, y, scale } = photos[activePhotoIndex];
-    const w = photos[activePhotoIndex].img.width * scale;
-    const h = photos[activePhotoIndex].img.height * scale;
-    tempCtx.strokeStyle = 'rgba(74, 144, 226, 0.9)';
-    tempCtx.lineWidth = 8 / scaleFactor; // scale line width
-    tempCtx.strokeRect(x - 4 / scaleFactor, y - 4 / scaleFactor, w + 8 / scaleFactor, h + 8 / scaleFactor);
-  }
-
-  const link = document.createElement('a');
-  link.download = 'your-custom-frame-high-res.png';
-  link.href = tempCanvas.toDataURL('image/png');
-  link.click();
-}
-  </script>
-</body>
-</html>
-
-
+      //
