Update index.html with meta tag and disclaimer
Added robots meta tag and updated disclaimer text.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custom Dollhouse Frame – Build My Mini</title>
+<meta name="robots" content="noindex,nofollow">
   <style>
     body {
       font-family: 'Segoe UI', system-ui, sans-serif;
@@ -137,6 +138,11 @@
   <input type="file" id="upload" accept="image/*">
 
   <div id="preview">
+  <p style="font-size: 1em; color: #444; background: #fff9e6; padding: 15px; border-radius: 8px; margin: 20px auto; max-width: 600px;">
+  Quick heads-up: Your photos stay private — we don't save them anywhere. Everything happens right here on your screen.  
+  If you close this tab or refresh? Poof — your design disappears. So download it before you go!  
+  No tricks, no tracking — just fun. 😊
+</p>
     <canvas id="canvas" width="500" height="600"></canvas>
   </div>
 
@@ -364,4 +370,5 @@
   </script>
 </body>
 </html>
+
 
