--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Custom Dollhouse Frame – Build My Mini</title>
-<meta name="robots" content="noindex,nofollow">
   <style>
     body {
       font-family: 'Segoe UI', system-ui, sans-serif;
@@ -138,11 +137,6 @@
   <input type="file" id="upload" accept="image/*">
 
   <div id="preview">
-  <p style="font-size: 1em; color: #444; background: #fff9e6; padding: 15px; border-radius: 8px; margin: 20px auto; max-width: 600px;">
-  Quick heads-up: Your photos stay private — we don't save them anywhere. Everything happens right here on your screen.  
-  If you close this tab or refresh? Poof — your design disappears. So download it before you go!  
-  No tricks, no tracking — just fun. 😊
-</p>
     <canvas id="canvas" width="500" height="600"></canvas>
   </div>
 
@@ -152,7 +146,7 @@
 
   <p class="disclaimer">Photos are processed in your browser only — nothing is uploaded or stored.</p>
 
-  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.18 – Feb 23, 2026 – Frame on Top in PNG Download</p>
+  <p style="font-size: 0.8em; color: #999; margin-top: 60px;">Version 1.17 – Feb 22, 2026 – Frame on Top in PNG Download</p>
 
   <script>
     const canvas = document.getElementById('canvas');
@@ -295,7 +289,7 @@
           let zoomFactor = newDist / touchDist;
           zoomFactor = 1 + (zoomFactor - 1) * 0.45;
           photos[activePhotoIndex].scale *= zoomFactor;
-          photos[activePhotoIndex].scale = Math.max(0.01, Math.min(photos[activePhotoIndex].scale, 8));
+          photos[activePhotoIndex].scale = Math.max(0.1, Math.min(photos[activePhotoIndex].scale, 8));
         }
         touchDist = newDist;
         drawAll();
@@ -337,11 +331,11 @@
       if (activePhotoIndex < 0) return;
       const zoomFactor = e.deltaY < 0 ? 1.1 : 0.9;
       photos[activePhotoIndex].scale *= zoomFactor;
-      photos[activePhotoIndex].scale = Math.max(0.01, Math.min(photos[activePhotoIndex].scale, 8));
+      photos[activePhotoIndex].scale = Math.max(0.1, Math.min(photos[activePhotoIndex].scale, 8));
       drawAll();
     });
 
-    // Download high-res PNG with correct layer order
+    // Download high-res PNG with frame on top
     function downloadPNG() {
       const tempCanvas = document.createElement('canvas');
       const scaleFactor = 2; // 2x resolution for sharp print
@@ -362,6 +356,16 @@
       // Draw frame ON TOP
       tempCtx.drawImage(frameImg, 0, 0, canvas.width, canvas.height);
 
+      // Draw selection border ON TOP (if active)
+      if (activePhotoIndex >= 0 && photos[activePhotoIndex]) {
+        const { x, y, scale } = photos[activePhotoIndex];
+        const w = photos[activePhotoIndex].img.width * scale;
+        const h = photos[activePhotoIndex].img.height * scale;
+        tempCtx.strokeStyle = 'rgba(74, 144, 226, 0.9)';
+        tempCtx.lineWidth = 8 / scaleFactor;
+        tempCtx.strokeRect(x - 4 / scaleFactor, y - 4 / scaleFactor, w + 8 / scaleFactor, h + 8 / scaleFactor);
+      }
+
       const link = document.createElement('a');
       link.download = 'your-custom-frame-high-res.png';
       link.href = tempCanvas.toDataURL('image/png');
@@ -370,5 +374,3 @@
   </script>
 </body>
 </html>
-
-
